--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello world
+<!doctype html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>PruebaNGCLI</title>
+  <base href="/">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link href="styles.846b276e6a306d29f48a.bundle.css" rel="stylesheet"/></head>
+<body>
+  <app-root>Loading...</app-root>
+<script type="text/javascript" src="inline.074550d0e32822a92b02.bundle.js"></script><script type="text/javascript" src="polyfills.8017dcfff68e7ab3b0c5.bundle.js"></script><script type="text/javascript" src="vendor.48549dc70dc7e21badd2.bundle.js"></script><script type="text/javascript" src="main.1165efa67d4f67fdad54.bundle.js"></script></body>
+</html>
