--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>PruebaNGCLI</title>
-  <base href="/prueba-ng-cli/">
+  <base href="/">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="styles.846b276e6a306d29f48a.bundle.css" rel="stylesheet"/></head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.458c573d11321a62b1ff.bundle.js"></script><script type="text/javascript" src="polyfills.8b7d604501fed2f06693.bundle.js"></script><script type="text/javascript" src="main.faed6f996534d13ea86e.bundle.js"></script></body>
+<script type="text/javascript" src="inline.f2aeaf79eca4b61bda7d.bundle.js"></script><script type="text/javascript" src="polyfills.11f3d05770948f2dd4c9.bundle.js"></script><script type="text/javascript" src="vendor.66f1bc3a16667f94fb1c.bundle.js"></script><script type="text/javascript" src="main.9158886d2625ab0ead11.bundle.js"></script></body>
 </html>
