(FEAT): Yuju test site

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PruebaNGCLI</title>
+  <title>YujuTechnicalTest</title>
   <base href="/">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.846b276e6a306d29f48a.bundle.css" rel="stylesheet"/></head>
+<link rel="stylesheet" href="styles.3ff695c00d717f2d2a11.css"></head>
 <body>
-  <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.f2aeaf79eca4b61bda7d.bundle.js"></script><script type="text/javascript" src="polyfills.11f3d05770948f2dd4c9.bundle.js"></script><script type="text/javascript" src="vendor.66f1bc3a16667f94fb1c.bundle.js"></script><script type="text/javascript" src="main.9158886d2625ab0ead11.bundle.js"></script></body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.35364ef724b1596d9d1d.js"></script><script type="text/javascript" src="es2015-polyfills.e17997aea7f522b8d49d.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.f480751bcd1d502daa32.js"></script></body>
 </html>
