--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Medidays</title>
+  <title>Dentago</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script>
@@ -19,8 +18,8 @@
     }
     function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
   </script>
-<link rel="stylesheet" href="styles.553251c52e9d4ae1a4ed.css"></head>
+<link rel="stylesheet" href="styles.552637e813892c94b621.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.b0657154bc33c6ff11ae.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.e9ec0ac44532f1a8d7f3.js"></script><script type="text/javascript" src="main.8ebc3e6a553966b3e663.js"></script></body>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.b0657154bc33c6ff11ae.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="scripts.e9ec0ac44532f1a8d7f3.js"></script><script type="text/javascript" src="main.cc5257667aa88d800868.js"></script></body>
 </html>
